--- a/documentation.html
+++ b/documentation.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Documentation - Kelompok Kikuk Kikuk</title>
         <link rel="stylesheet" href="dokumentasi/style.css">
+        <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     </head>
     <body>
         <!-- Navigation -->
