Change role of Muhamad Rizki F. to King Shiso

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                  <a href="view/muhamad_rizki_firmansyah.html" class="bg-gray-900 border border-gray-800 rounded-2xl p-6 text-center transform transition-all duration-300 hover:scale-105 hover:border-accent block">
                     <img src="images/anggota/muhamad_rizki_firmansyah.jpg" alt="Foto Anggota" class="w-32 h-32 rounded-full mx-auto mb-5 border-4 border-gray-700 object-cover">
                     <h3 class="text-xl font-bold text-accent mb-1">Muhamad Rizki F.</h3>
-                    <p class="text-gray-400">Wakil admin</p>
+                    <p class="text-gray-400">King Shiso</p>
                 </a>
                  <a href="view/muhammad_ariel_dwi_ardiansyah.html" class="bg-gray-900 border border-gray-800 rounded-2xl p-6 text-center transform transition-all duration-300 hover:scale-105 hover:border-accent block">
                     <img src="images/anggota/muhammad_ariel_dwi_ardiansyah.jpg" alt="Foto Anggota" class="w-32 h-32 rounded-full mx-auto mb-5 border-4 border-gray-700 object-cover">
