--- a/documentation.html
+++ b/documentation.html
@@ -14,7 +14,7 @@
                 <div class="logo">PORTFOLIO</div>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="index.html#team" class="nav-link">Team</a></li>
+                    <li><a href="team.html" class="nav-link">Team</a></li>
                     <li><a href="documentation.html"
                             class="nav-link active">Documentation</a></li>
                     <li><a href="news.html" class="nav-link">News</a></li>
