--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               Kelompok Kikuk Kikuk
             </h1>
             <p class="mt-6 text-lg text-gray-300 max-w-2xl mx-auto lg:mx-0">
-              Dibentuk oleh M. Raihan Al Irsyad pada 21 November 2023, "Kikuk Kikuk👍🏻" adalah wadah transformatif. Kami hadir untuk menumbuhkan fondasi kebersamaan yang kuat, memastikan setiap suara didengar melalui komunikasi yang efektif, dan secara kolektif mendorong setiap proyek menuju keberhasilan.
+              Dibentuk oleh M. Raihan Al Irsyad pada 21 November 2023, "Kikuk Kikuk🍑🍑" adalah wadah transformatif. Kami hadir untuk menumbuhkan fondasi kebersamaan yang kuat, memastikan setiap suara didengar melalui komunikasi yang efektif, dan secara kolektif mendorong setiap proyek menuju keberhasilan.
             </p>
 
             <!-- Stats -->
