--- a/team.html
+++ b/team.html
@@ -163,7 +163,7 @@
             >
           </div>
           <div class="p-3 sm:p-6 text-center">
-            <h3 class="text-sm sm:text-xl font-bold text-accent mb-1 sm:mb-2">Muhamad Rizki F.</h3>
+            <h3 class="text-sm sm:text-xl font-bold text-accent mb-1 sm:mb-2">MUHAMAD RIZKI FIRMANSYAH.</h3>
             <p class="text-gray-400 text-xs sm:text-sm">King Shiso</p>
           </div>
         </a>
@@ -211,7 +211,7 @@
             >
           </div>
           <div class="p-3 sm:p-6 text-center">
-            <h3 class="text-sm sm:text-xl font-bold text-accent mb-1 sm:mb-2">Mishbahul M. A. J.</h3>
+            <h3 class="text-sm sm:text-xl font-bold text-accent mb-1 sm:mb-2">Mishbahul ma'arif al jaly.</h3>
             <p class="text-gray-400 text-xs sm:text-sm">Wakil Admin</p>
           </div>
         </a>
@@ -259,7 +259,7 @@
             >
           </div>
           <div class="p-3 sm:p-6 text-center">
-            <h3 class="text-sm sm:text-xl font-bold text-accent mb-1 sm:mb-2">Rasya Aautar R.</h3>
+            <h3 class="text-sm sm:text-xl font-bold text-accent mb-1 sm:mb-2">Rasya Authar Ramadhani.</h3>
             <p class="text-gray-400 text-xs sm:text-sm">Admin Instagram</p>
           </div>
         </a>
@@ -314,3 +314,4 @@
 
 </body>
 </html>
+
