--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="WXFHLpfDqIm0ulVPyRtqeV01lQfPx4j0zbsq5SLXZbA">
+  <meta name="google-site-verification" content="HF-leglWhAn3YwgMR3OQQNJRlrL3osI1jRI5aY9D9CE">
+
   <!-- ==================== SEO PRIMARY TAGS ==================== -->
   <title>Kelompok Kikuk Kikuk | Kikuk Bumbum - Portfolio Tim</title>
   <meta name="description" content="Website resmi Kelompok Kikuk Kikuk (Kikuk Bumbum). Tim terdiri dari M. Raihan Al Irsyad, Muhamad Rizki Firmansyah, Rizkyan Dwi Fahrizah, Muhammad Ariel Dwi Ardiansyah, Mishbahul Ma'arif Al Jaly, Muhammad Fathoni Firdaus, Muhammad Andreas Athallah Saifa Anam, dan Rasya Aautar Ramadhani.">
