--- a/team/index.html
+++ b/team/index.html
@@ -369,7 +369,7 @@
 
       <!-- Back to Home CTA -->
       <div class="mt-16 text-center">
-        <a href="index.html" class="inline-block bg-accent text-black px-8 py-4 rounded-full font-bold text-lg hover:bg-white transition-all duration-300 hover:-translate-y-1">
+        <a href="https://itskikuk.my.id" class="inline-block bg-accent text-black px-8 py-4 rounded-full font-bold text-lg hover:bg-white transition-all duration-300 hover:-translate-y-1">
           ← Kembali ke Home
         </a>
       </div>
@@ -410,4 +410,5 @@
   </script>
 
 </body>
+
 </html>
