Update print statement from 'Hello' to 'Goodbye'

--- a/team/index.html
+++ b/team/index.html
@@ -191,14 +191,14 @@
       <div class="flex justify-between items-center h-20">
         
         <div class="flex-shrink-0">
-          <a href="index.html" class="text-2xl font-extrabold text-accent tracking-wider">PORTFOLIO</a>
+          <a href="https://itskikuk.my.id" class="text-2xl font-extrabold text-accent tracking-wider">PORTFOLIO</a>
         </div>
 
         <div class="hidden md:flex md:items-center md:space-x-8">
-          <a href="index.html" class="text-gray-300 hover:text-accent transition-colors font-medium">Home</a>
-          <a href="team.html" class="text-accent hover:text-white transition-colors font-bold">Team</a>
-          <a href="documentation.html" class="text-gray-300 hover:text-accent transition-colors font-medium">Documentation</a>
-          <a href="news.html" class="text-gray-300 hover:text-accent transition-colors font-medium">News</a>
+          <a href="https://itskikuk.my.id" class="text-gray-300 hover:text-accent transition-colors font-medium">Home</a>
+          <a href="https://itskikuk.my.id/team.html" class="text-accent hover:text-white transition-colors font-bold">Team</a>
+          <a href="https://itskikuk.my.id/documentation.html" class="text-gray-300 hover:text-accent transition-colors font-medium">Documentation</a>
+          <a href="https://itskikuk.my.id/news.html" class="text-gray-300 hover:text-accent transition-colors font-medium">News</a>
         </div>
 
         <div class="md:hidden flex items-center">
@@ -410,5 +410,4 @@
   </script>
 
 </body>
-
 </html>
